--- a/index.html
+++ b/index.html
@@ -93,104 +93,128 @@
     </details>
   </div>
 
-  <input id="fileInput" type="file" hidden />
-<button class="btn" id="pickBtn">Pilih file</button>
-<button class="btn primary" id="uploadBtn">Upload ke Repo</button>
-<div class="muted" id="uploadStatus"></div>
+
+
+<div class="card" style="border:none" id="uploader" hidden>
+  <div class="row"><strong>Upload PDF ke GitHub</strong> <span class="muted">· commit ke branch</span></div>
+  <div class="list">
+    <div style="display:flex;gap:8px;flex-wrap:wrap">
+      <input type="file" id="pdfFile" accept="application/pdf" />
+      <input type="text" id="ghOwner"  placeholder="owner"  class="mono" style="width:140px">
+      <input type="text" id="ghRepo"   placeholder="repo"   class="mono" style="width:160px">
+      <input type="text" id="ghPath"   placeholder="path (mis. uploads/file.pdf)" class="mono" style="flex:1">
+      <input type="text" id="ghBranch" placeholder="branch" value="main" class="mono" style="width:110px">
+      <button class="btn primary" id="btnUploadPdf">Upload</button>
+    </div>
+    <div id="uploadNote" class="muted" style="margin-top:8px"></div>
+  </div>
+</div>
+
+
+
+  
 <script>
-  const $ = (id)=>document.getElementById(id);
-
-  // Encode teks (UTF-8) → base64 (untuk file teks kecil)
-  function b64FromText(str) {
-    return btoa(unescape(encodeURIComponent(str)));
-  }
-
-  // Encode File/Binary → base64 (umum)
-  function b64FromFile(file) {
-    return new Promise((resolve,reject)=>{
-      const fr = new FileReader();
-      fr.onload = () => {
-        const bytes = new Uint8Array(fr.result);
-        let bin = "";
-        for (let i=0;i<bytes.length;i++) bin += String.fromCharCode(bytes[i]);
-        resolve(btoa(bin));
-      };
-      fr.onerror = reject;
-      fr.readAsArrayBuffer(file);
-    });
-  }
-
-  async function getExistingSha({owner, repo, path, branch, token}) {
-    const url = `https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}?ref=${encodeURIComponent(branch)}`;
-    const res = await fetch(url, {
-      headers: { "Authorization": "Bearer "+token, "Accept":"application/vnd.github+json" }
-    });
-    if (res.status === 404) return null;      // belum ada
-    if (!res.ok) throw new Error("Gagal cek file: "+res.status);
-    const json = await res.json();
-    return json.sha || null;
-  }
-
-  async function uploadToRepo({owner, repo, path, contentBase64, message, branch="main"}) {
-    const token = sessionStorage.getItem("gh_token");
-    if (!token) throw new Error("Belum login.");
-
-    // Cek apakah file sudah ada → perlu sha saat update
-    const sha = await getExistingSha({owner, repo, path, branch, token}).catch(()=>null);
-
-    const url = `https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}`;
-    const body = {
-      message: message || `upload via myapp: ${path}`,
-      content: contentBase64,
-      branch,
-      ...(sha ? { sha } : {})
+ // ===== Helpers upload PDF =====
+async function b64FromFile(file) {
+  return new Promise((resolve, reject) => {
+    const fr = new FileReader();
+    fr.onload = () => {
+      const bytes = new Uint8Array(fr.result);
+      let bin = "";
+      for (let i = 0; i < bytes.length; i++) bin += String.fromCharCode(bytes[i]);
+      resolve(btoa(bin)); // base64 untuk konten biner (PDF)
     };
+    fr.onerror = reject;
+    fr.readAsArrayBuffer(file);
+  });
+}
 
-    const res = await fetch(url, {
-      method: "PUT",
-      headers: {
-        "Authorization": "Bearer "+token,
-        "Accept": "application/vnd.github+json",
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify(body)
-    });
+async function getExistingSha({ owner, repo, path, branch, token }) {
+  const url = `https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}?ref=${encodeURIComponent(branch)}`;
+  const res = await fetch(url, {
+    headers: { "Authorization": "Bearer " + token, "Accept": "application/vnd.github+json" }
+  });
+  if (res.status === 404) return null;
+  if (!res.ok) throw new Error("Gagal cek file: " + res.status);
+  const json = await res.json();
+  return json.sha || null;
+}
 
-    const json = await res.json();
-    if (!res.ok) throw new Error(json.message || ("HTTP "+res.status));
-    return json; // berisi commit, content.html_url, dsb.
+async function uploadToRepo({ owner, repo, path, contentBase64, message, branch = "main" }) {
+  const token = sessionStorage.getItem("gh_token");
+  if (!token) throw new Error("Belum login.");
+
+  const sha = await getExistingSha({ owner, repo, path, branch, token }).catch(() => null);
+  const url = `https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}`;
+  const body = { message: message || `upload via myapp: ${path}`, content: contentBase64, branch, ...(sha ? { sha } : {}) };
+
+  const res = await fetch(url, {
+    method: "PUT",
+    headers: {
+      "Authorization": "Bearer " + token,
+      "Accept": "application/vnd.github+json",
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify(body)
+  });
+
+  const json = await res.json();
+  if (!res.ok) throw new Error(json.message || ("HTTP " + res.status));
+  return json;
+}
+
+// ===== Wiring UI uploader =====
+function initUploaderDefaults(me) {
+  const owner = document.getElementById("ghOwner");
+  const repo  = document.getElementById("ghRepo");
+  const path  = document.getElementById("ghPath");
+  const branch= document.getElementById("ghBranch");
+  const btn   = document.getElementById("btnUploadPdf");
+  const note  = document.getElementById("uploadNote");
+  const file  = document.getElementById("pdfFile");
+
+  // Prefill owner pakai username login
+  if (owner && me?.login) owner.value = me.login;
+
+  // Contoh default repo+path (silakan ganti sesuai kebutuhan)
+  if (repo && !repo.value)  repo.value  = "uploads";
+  if (path && !path.value)  path.value  = "uploads/sample.pdf";
+  if (branch && !branch.value) branch.value = "main";
+
+  if (btn) {
+    btn.onclick = async () => {
+      try {
+        note.textContent = "Mengunggah…";
+        if (!file.files[0]) throw new Error("Pilih file PDF dulu.");
+
+        const f = file.files[0];
+        if (f.type !== "application/pdf") {
+          // tetap izinkan, tapi beri warning ringan
+          console.warn("MIME bukan application/pdf, lanjutkan saja.");
+        }
+
+        // Jika user belum isi path → gunakan nama file
+        const p = path.value?.trim() || ("uploads/" + f.name.replace(/\s+/g, "_"));
+        const contentBase64 = await b64FromFile(f);
+
+        const result = await uploadToRepo({
+          owner: owner.value.trim(),
+          repo : repo.value.trim(),
+          path : p,
+          branch: branch.value.trim() || "main",
+          message: `feat: upload PDF ${f.name} via myapp`
+        });
+
+        const url = result?.content?.html_url || result?.commit?.html_url || "";
+        note.innerHTML = `Sukses ✅ <a target="_blank" href="${url}">Lihat di GitHub</a>`;
+      } catch (e) {
+        console.error(e);
+        note.textContent = "Gagal ❌ " + e.message;
+      }
+    };
   }
+}
 
-  // Contoh wiring UI
-  $("pickBtn").onclick = ()=> $("fileInput").click();
-
-  $("uploadBtn").onclick = async () => {
-    try {
-      $("uploadStatus").textContent = "Mengunggah…";
-
-      // ==== KONFIGURASI TUJUAN ====
-      const owner = "sismadi";          // ganti sesuai target
-      const repo  = "login";        // ganti
-      const path  = "namafile.txt"; // ganti
-      const branch = "main";            // ganti bila perlu
-      const message = "feat: upload via myapp";
-
-      // ==== AMBIL SUMBER FILE ====
-      const file = $("fileInput").files[0];
-      if (!file) throw new Error("Pilih file dulu.");
-
-      // Base64 isi file:
-      const contentBase64 = await b64FromFile(file);
-
-      // Unggah:
-      const result = await uploadToRepo({owner, repo, path, contentBase64, message, branch});
-      const url = result?.content?.html_url || result?.commit?.html_url || "";
-      $("uploadStatus").innerHTML = `Sukses ✅ <a target="_blank" href="${url}">Lihat di GitHub</a>`;
-    } catch (e) {
-      console.error(e);
-      $("uploadStatus").textContent = "Gagal ❌ " + e.message;
-    }
-  };
 </script>
 
   
@@ -329,6 +353,11 @@
 
     ui.whoami.hidden = false;
     ui.actions.innerHTML = "";
+
+ // Tampilkan uploader dan isi defaultnya
+ document.getElementById("uploader").hidden = false;
+ initUploaderDefaults(me);
+    
   }
 
   function renderSignedOut(){
